Fixed scroll problem on small desktop screen

--- a/src/app/components/landing-page-content/landing-page-content.component.scss
+++ b/src/app/components/landing-page-content/landing-page-content.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   width: 100%;
   // height: 100%;
-  max-height: 60vh;
+  max-height: 55vh;
   color: colors.$white;
   gap: 2%;
 }
